fixed the scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   outline: none;
   scroll-behavior: smooth;
   font-family: 'Raleway', sans-serif;
+  
 }
 
 :root {
@@ -22,6 +23,7 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
